tests/NormalTests/paczka1/small_fuzzy/11007927.err
Error in line 4: 3U8WW9lGjKs A760 97,4
Error in line 8: 3U8WW9lGjKs S75 69,5
Error in line 11: 3U8WW9lGjKs S532 4,9
Error in line 3: S532 S532 32,9
